--- a/src/styles/pages/landingPage.scss
+++ b/src/styles/pages/landingPage.scss
@@ -7,7 +7,7 @@
   position: relative;
   height: 100vh;
   font-weight: bold;
-  background-color: blue;
+
   .title {
     width: 50%;
     display: flex;
@@ -16,7 +16,7 @@
     z-index: 1;
     row-gap: 2rem;
     padding: 0 0 4rem 2rem;
-    background-color: green;
+
     h1 {
       display: flex;
       flex-direction: column;
